[package]
name = "opengl_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "example"
path = "examples/example.rs"

[[example]]
name = "sphere_grid"
path = "examples/sphere_grid.rs"

[[example]]
name = "gui_example"
path = "examples/gui_example.rs"

[dependencies]
#glutin = "0.28.0"
glium = { version = "0.31", default-features = true }
cgmath = "0.18"
parking_lot = "0.11"
russimp = "1.0.1"
image = "0.23.14"
gl = "0.14.0"
egui = { version = "0.16.0", default-features = false, features = [
  "convert_bytemuck",
  "single_threaded",
] }
egui-winit = { version = "0.16.0", default-features = false, features = ["epi"] }
epi = { version = "0.16.0", optional = true }
egui_glium = "0.16.0"

ahash = "0.7"
bytemuck = "1.7"
rfd = "0.7.0"
